chore: update .gitignore to ignore executables and build files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@ main
 *.o
 playlist.dat
 .vscode/
+
+# build artifacts
+main
+*.o
+*.exe
+
+# OS / Editor
+.DS_Store
+Thumbs.db
+.vscode/
+*.swp
+
+# local playlist file (we will move it to data/ but keep ignored in root)
+playlist.txt
